--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm install
+      - run: run build
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+           aws-access-kex-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           aws-secret-access-key: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
+           aws-region:  eu-west-2
+      
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
