--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       #- run: run build
       - uses: aws-actions/configure-aws-credentials@v1
         with:
-           aws-access-kex-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
            aws-secret-access-key: $ {{ secrets.AWS_SECRET_ACCESS_KEY }}
            aws-region:  eu-west-2
       - run: aws s3 ls
