--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
+      #- uses: actions/setup-node@v1
+        #with:
+          #node-version: 12
       #- run: npm install
       #- run: run build
       - uses: aws-actions/configure-aws-credentials@v1
@@ -41,5 +41,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo Add other actions to build ${{ secrets.AWS_ACCESS_KEY_ID }},
+          echo test, and deploy your project $ {{ secrets.AWS_SECRET_ACCESS_KEY }}.
